--- a/musique1.html
+++ b/musique1.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Sittin'on</title>
+    <link rel="stylesheet" href="/style-musique.css">
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-   <div>
     <h1><i> Sittin'on</i> <strong><u>Otis redding</u></strong></h1>
-    <img src="/assets/image/500x500.jpg" alt="Otis redding" width="250">
+<div class="corps">
+    <div class="image">
+        <img src="/assets/image/otis-redding.jpg" alt="Otis redding" width="300">
+    </div>
+    <div class="video">
+        <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/xvihgv" width="100%"
+            height="100%" allowfullscreen> </iframe>
+    </div>
+    <div class="paroles">
     <h2>Paroles</h2>
+    <br>
     <p>Sittin' in the mornin' sun <br>
         I'll be sittin' when the evenin' comes <br>
         Watching the ships roll in <br>
@@ -41,14 +54,16 @@
         Now I'm just gon' sit, at the dock of the bay<br>
         Watchin' the tide roll away, ooh yeah<br>
         Sittin' on the dock of the bay<br>
-        Wastin' time</p>
-  <br>
-        <iframe width="942" height="530" src="https://www.youtube.com/embed/gLUgPmNHQLA" title="Otis Redding - (Sittin' On) The Dock Of The Bay (LYRICS)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br>
-        <br>
-   <a href="/index.html">Retourner au menu principal</a>
-   <br>
-   <br>
+        Wastin' time
+    </p>
 </div>
+
+
+<button class="buttonbtn">
+        <a href="/index.html">Retourner au menu principal</a></button>
+   
+    <br>
+    <br>
 </body>
+
 </html>
