--- a/musique2.html
+++ b/musique2.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Three little birds</title>
-</head>
-<body>
-   <div>
-    <h1><i> Three little birds</i> <strong><u>Bob Marler</u></strong></h1>
-    <img src="/assets/image/bobmarley.jpg" alt="Bob Marley" width="250">
-    <h2>Paroles</h2>
-    <p>Don't worry about a thing,<br>
-        'Cause every little thing gonna be all right.<br>
-        Singin': "Don't worry about a thing,<br>
-        'Cause every little thing gonna be all right!"<br>
-        <br>
-        Rise up this mornin',<br>
-        Smiled with the risin' sun,<br>
-        Three little birds<br>
-        Pitch by my doorstep<br>
-        Singin' sweet songs<br>
-        Of melodies pure and true,<br>
-        Sayin', ("This is my message to you-ou-ou:")<br>
-        <br>
-        Singin': "Don't worry 'bout a thing,<br>
-        'Cause every little thing gonna be all right."<br>
-        Singin': "Don't worry (don't worry) 'bout a thing,<br>
-        'Cause every little thing gonna be all right!"<br>
-        <br>
-        Rise up this mornin',<br>
-        Smiled with the risin' sun,<br>
-        Three little birds<br>
-        Pitch by my doorstep<br>
-        Singin' sweet songs<br>
-        Of melodies pure and true,<br>
-        Sayin', "This is my message to you-ou-ou:"<br>
+    <link rel="stylesheet" href="/style-musique.css">
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&display=swap" rel="stylesheet">
 
-        Singin': "Don't worry about a thing, worry about a thing, oh!<br>
-        Every little thing gonna be all right. Don't worry!"<br>
-        Singin': "Don't worry about a thing" - I won't worry!<br>
-        "'Cause every little thing gonna be all right."<br>
-        Singin': "Don't worry about a thing,<br>
-        'Cause every little thing gonna be all right" - I won't worry!<br>
-        Singin': "Don't worry about a thing,<br>
-        'Cause every little thing gonna be all right."<br>
-        Singin': "Don't worry about a thing, oh no!<br>
-        'Cause every little thing gonna be all right! /fadeout<br>
- 
-        <iframe width="942" height="530" src="https://www.youtube.com/embed/osAGmnwM4fw" title="Bob Marley  - Three Little Birds (15 min version) ... Peace!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br>
+</head>
+
+<body>
+    <div>
+        <h1><i> Three little birds</i> <strong><u>Bob Marler</u></strong></h1>
+        <img src="/assets/image/bobmarley.jpg" alt="Bob Marley" width="250">
+        <h2>Paroles</h2>
+        <p>Don't worry about a thing,<br>
+            'Cause every little thing gonna be all right.<br>
+            Singin': "Don't worry about a thing,<br>
+            'Cause every little thing gonna be all right!"<br>
+            <br>
+            Rise up this mornin',<br>
+            Smiled with the risin' sun,<br>
+            Three little birds<br>
+            Pitch by my doorstep<br>
+            Singin' sweet songs<br>
+            Of melodies pure and true,<br>
+            Sayin', ("This is my message to you-ou-ou:")<br>
+            <br>
+            Singin': "Don't worry 'bout a thing,<br>
+            'Cause every little thing gonna be all right."<br>
+            Singin': "Don't worry (don't worry) 'bout a thing,<br>
+            'Cause every little thing gonna be all right!"<br>
+            <br>
+            Rise up this mornin',<br>
+            Smiled with the risin' sun,<br>
+            Three little birds<br>
+            Pitch by my doorstep<br>
+            Singin' sweet songs<br>
+            Of melodies pure and true,<br>
+            Sayin', "This is my message to you-ou-ou:"<br>
+
+            Singin': "Don't worry about a thing, worry about a thing, oh!<br>
+            Every little thing gonna be all right. Don't worry!"<br>
+            Singin': "Don't worry about a thing" - I won't worry!<br>
+            "'Cause every little thing gonna be all right."<br>
+            Singin': "Don't worry about a thing,<br>
+            'Cause every little thing gonna be all right" - I won't worry!<br>
+            Singin': "Don't worry about a thing,<br>
+            'Cause every little thing gonna be all right."<br>
+            Singin': "Don't worry about a thing, oh no!<br>
+            'Cause every little thing gonna be all right! /fadeout<br>
+        <div class="video">
+            <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0"
+                type="text/html" src="https://www.dailymotion.com/embed/video/x7t8g51" width="100%" height="100%"
+                allowfullscreen> </iframe>
+        </div>
+         <br>
         <br>
         <a href="/index.html">Retourner au menu principal</a>
     </div>
     <br>
     <br>
 </body>
+
 </html>
