--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet"></head>
 
 <body>
     <div>
@@ -20,9 +19,10 @@
                 </div>
                 <div class="back-face fnb bf1">
                     <h3><i>Sittin'on</i> - <strong>Otis Redding</strong></h3>
-                <a class="buttonbtn" href="/musique1.html">En savoir plus</a>
-                         </div>
+                    <a class="buttonbtn" href="/musique1.html">En savoir plus</a>
+                </div>
             </div>
+
             <div class="card">
                 <div class="front-face fnb">
                     <h2>Reggae</h2>
@@ -30,8 +30,16 @@
                 <div class="back-face fnb bf2">
                     <h3><i>Three little birds</i> - <strong>Bob Marley</strong></h3>
                     <a class="buttonbtn" href="/musique2.html">En savoir plus</a>
-                    <h4></h4>
-        
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="front-face fnb">
+                    <h2>Rap</h2>
+                </div>
+                <div class="back-face fnb bf3">
+                    <h3><i>Samuraï</i> - <strong>Shurik'n</strong></h3>
+                    <a class="buttonbtn" href="/musique3.html">En savoir plus</a>
                 </div>
             </div>
 
