--- a/musique1.html
+++ b/musique1.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <title>Sittin'on</title>
     <link rel="stylesheet" href="/style-musique.css">
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1><i> Sittin'on</i> <strong><u>Otis redding</u></strong></h1>
+    <h1><i> Sittin'on</i> - <strong><u>Otis redding</u></strong></h1>
 <div class="corps">
     <div class="image">
         <img src="/assets/image/otis-redding.jpg" alt="Otis redding" width="300">
@@ -61,9 +60,7 @@
 
 <button class="buttonbtn">
         <a href="/index.html">Retourner au menu principal</a></button>
-   
-    <br>
-    <br>
+
 </body>
 
 </html>
