--- a/musique2.html
+++ b/musique2.html
@@ -5,15 +5,23 @@
     <meta charset="UTF-8">
     <title>Three little birds</title>
     <link rel="stylesheet" href="/style-musique.css">
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div>
-        <h1><i> Three little birds</i> <strong><u>Bob Marler</u></strong></h1>
-        <img src="/assets/image/bobmarley.jpg" alt="Bob Marley" width="250">
+    <h1><i> Three little birds</i> - <strong><u>Bob Marley</u></strong></h1>
+    <div class="corps">
+        <div class="image">
+        <img src="/assets/image/bob-marley.jpg" alt="Bob Marley" width="301px">
+    </div>
+    <div class="video">
+        <iframe  frameborder="0"
+            type="text/html" src="https://www.dailymotion.com/embed/video/x7t8g51" width="100%" height="100%"
+            allowfullscreen> </iframe>
+    </div>
+    <div class="paroles">
         <h2>Paroles</h2>
+        <br>
         <p>Don't worry about a thing,<br>
             'Cause every little thing gonna be all right.<br>
             Singin': "Don't worry about a thing,<br>
@@ -50,17 +58,12 @@
             'Cause every little thing gonna be all right."<br>
             Singin': "Don't worry about a thing, oh no!<br>
             'Cause every little thing gonna be all right! /fadeout<br>
-        <div class="video">
-            <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0"
-                type="text/html" src="https://www.dailymotion.com/embed/video/x7t8g51" width="100%" height="100%"
-                allowfullscreen> </iframe>
+            </p>
         </div>
-         <br>
-        <br>
-        <a href="/index.html">Retourner au menu principal</a>
+
+        <button class="buttonbtn">
+            <a href="/index.html">Retourner au menu principal</a></button>
     </div>
-    <br>
-    <br>
 </body>
 
 </html>
