--- a/musique2.html
+++ b/musique2.html
@@ -12,8 +12,9 @@
     <h1><i> Three little birds</i> - <strong><u>Bob Marley</u></strong></h1>
     <div class="corps">
         <div class="image">
+            <div class="img">
         <img src="/assets/image/bob-marley.jpg" alt="Bob Marley" width="301px">
-    </div>
+    </div></div>
     <div class="video">
         <iframe  frameborder="0"
             type="text/html" src="https://www.dailymotion.com/embed/video/x7t8g51" width="100%" height="100%"
