--- a/musique3.html
+++ b/musique3.html
@@ -3,113 +3,226 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Samurai</title>
+    <title>Demain c'est loin</title>
     <link rel="stylesheet" href="/style-musique.css">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1><i> Samuraï</i> - <strong><u>Shurik'n</u></strong></h1>
+    <h1><i> Demain c'est loin</i> - <strong><u>IAM</u></strong></h1>
 <div class="corps">
     <div class="image">
-        <img src="/assets/image/shurikn.jpg" alt="Otis redding" width="320">
-    </div>
+        <div class="img">
+        <img src="/assets/image/iam.jpg" alt="Otis redding" width="320">
+    </div></div>
     <div class="video">
-        <iframe  frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x9t9g" width="100%" height="100%" allowfullscreen > </iframe>
-    </div>
+        <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3df7i" width="100%" height="100%" allowfullscreen > </iframe> </div>    
     <div class="paroles">
     <h2>Paroles</h2>
     <br>
-    <p>Toujours vif, comme au premier jour de cours <br>
-        Où tour à tour les mecs te matent, claque pas des genoux<br>
-        T'es viré d'la cour, tenir le coup, regard froid<br>
-        Fais pas le tocard<br>
-        L'œil au beurre noir, vaut mieux le faire que l'avoir<br>
-        Dès le plus jeune âge engrainé<br>
-        À évoluer dans une meute où l'ego<br>
-        Se fait les dents sur les colliers d'à côté<br>
-        Où les réputations se font et se défont<br>
-        Où les moins costauds enjambent les ponts<br>
-        Se défoncent sans modération<br>
-        En guerre permanente avec les autre<br>s
-        Les bandes se forment<br>
-        On comprend vite qu'on est plus fort avec ses potes<br>
-        En somme, voici venir l'âge béni<br>
-        Où tu t'crois homme, mais t'es qu'un con<br>
-        Et y a qu'à toi qu'on n'a pas dit<br>
-        Les autres jouent les caïds pour une bille<br>
-        Puis une fille, les poils s'hérissent<br>
-        Les dents grinces, on tape pour des peccadilles<br>
-        Évite les yeux, on doit pas voir quand ça va mal<br>
-        La moindre faille physique ou mentale, l'issue peut être fatale<br>
-        On grandit au milieu des ronins<br>
-        Chacun sa barque pourrie sur sa mer de merde<br>
-        Chacun sa voie, sa vie<br>
-        Devant l'adversité, les coudes se soudent<br>
-        On pousse un kïai, le doute se taille<br>
-        Prêt à mourir comme un samuraï<br>
-        On joue dans un chambara<br>
-        La fierté, la loi<br>
-        Tuent comme un bon vieux Kurosawa<br>
-        La main sur le katana<br>
-        Même si la peur m'assaille<br>
-        Je partirai comme un samuraï<br>
-        On joue dans un chambara<br>
-        La fierté, la loi<br>
-        Tuent comme un bon vieux Kurosawa<br>
-        La main sur le katana<br>
-        Même si la peur m'assaille<br>
-        Je partirai comme un samuraï<br>
-        Le temps passe<br>
-        Baby Kart grandi entre le fer et la soie<br>
-        La soie, c'est avec le fer qu'il l'a acquise<br>
-        Aux prises avec la pression<br>
-        La presse relate ses actions<br>
-        La prison souvent remplace le paxon<br>
-        Le ponpon s'agite au-dessus de nos têtes<br>
-        Chacun le veut pour lui, un billet pour le manège<br>
-        Gratuit, verrouillé<br>
-        La nuit les lampadaires se morphent en mecs<br>
-        Une seule quête, les pépètes<br>
-        Quand t'as les sous tu drives une 7-20<br>
-        Et tu touches des seins<br>
-        On lutte<br>
-        Souvent on butte sur le pied du voisin<br>
-        Espace restreint<br>
-        On gueule souvent, on en vient aux mains<br>
-        Pour tout et rien<br>
-        Ça finit devant témoins<br>
-        Et va savoir combien de temps on peut rester sans voir les siens<br>
-        Comprends bien<br>
-        C'est une réalité, pas une BD<br>
-        Les sens toujours éveillés<br>
-        Éviter les embuches<br>
-        Les femmes risquées, les boites piégées<br>
-        Les gens ont changé<br>
-        La rue est mal fréquentée<br>
-        Surtout sors pas sans tes papiers<br>
-        Ça peut gâcher la soirée<br>
-        J'ai combattu<br>
-        J'ai eu mon heure, mon jour<br>
-        Je verse un verset pour ceux qui attendent leur tour<br>
-        Et ceux qui ne rigoleront plus<br>
-        On baissera pas les bras<br>
-        On n'est pas né pour ca<br>
-        Même vaincu, on se jettera dans la bataille<br>
-        Pour l'honneur, comme un samouraï<br>
-        On joue dans un chambara (chambara)<br>
-        La fierté, la loi<br>
-        Tuent comme un bon vieux Kurosawa<br>
-        La main sur le katana (katana)<br>
-        Même si la peur m'assaille<br>
-        Je partirai comme un samuraï<br>
-        On joue dans un chambara (chambara)<br>
-        La fierté, la loi<br>
-        Tuent comme un bon vieux Kurosawa<br>
-        La main sur le katana (katana)<br>
-        Même si la peur m'assaille<br>
-        Je partirai comme un samuraï<br>
+    <p>L'encre coule, le sang se répand <br>
+        La feuille buvard absorbe l'émotion, sac d'image dans ma mémoire<br>
+        Je parle de ce que mes proches vivent et de ce que Je vois<br>
+        Des mecs coulés par le désespoir qui partent à la dérive<br><br>
+        Des mecs qui pour 20.000 de shit se déchirent<br>
+        Je parle du quotidien, écoute bien mes phrases font pas rire<br>
+        Rire, sourire, certains l'ont perdu je pense à Momo<br>
+        Qui m'a dit à plus jamais, je ne l'ai revu<br><br>
+        Tenter le diable pour sortir de la galère, t'as gagné frère<br>
+        Mais c'est toujours la misère pour ce qui pousse derrière<br>
+        Pousse pousser au milieu d'un champs de béton<br>
+        Grandir dans un parking et voir les grands faire rentrer les ronds<br><br>
+        La pauvreté, ça fait gamberger en deux temps trois mouvements<br>
+        On coupe, on compresse, on découpe, on emballe, on vend<br>
+        A tour de bras, on fait rentrer l'argent du crack<br>
+        Ouais, c'est ça la vie, et parle pas de RMI ici ici ici<br><br>
+        Ici, le rêve des jeunes c'est la Golf GTI, survet' Tachini<br>
+        Tomber les femmes à l'aise comme many<br>
+        Sur Scarface, je suis comme tout le monde je délire bien<br>
+        Dieu merci, j'ai grandis, je suis plus malin, lui il crève à la fin<br><br>
+        La fin, la faim, la faim justifie les moyens, 4, 5 coups malsains<br>
+        Et on tient jusqu'à demain, après on verra bien<br>
+        On marche dans l'ombre du malin du soir au matin<br>
+        Tapis dans un coin, couteau à la main, bandit de grand chemin<br><br>
+        Chemin, chemin, y'en a pas deux pour être un dieu<br>
+        Frapper comme une enclume, pas tomber les yeux, I'envieux en veut<br>
+        Une route pour y entrer deux pour s'en sortir, 3/4 cuir<br>
+        Réussir, s'évanouir, devenir un souvenir<br><br>
+        Souvenir être si jeune, avoir plein le répertoire<br>
+        Des gars rayés de la carte qu'on efface comme un tableau tchpaou! c'est le
+        Noir<br>
+        Croire en qui, en quoi, les mecs sont tous des mirroirs<br>
+        Vont dans le même sens, veulent s'en mettre plein les tirroirs<br><br>
+        Tirroir, on y passe notre vie, on y fini avant de connaître l'enfer<br>
+        Sur terre, on construit son paradis<br>
+        Fiction, désillusion trop forte, sors le chichon<br>
+        La réalité tape trop dur, besoin d'évasion<br><br>
+        Evasion, évasion, effort d'imagination, ici tout est gris<br>
+        Les murs, les esprits, les rats la nuit<br>
+        On veut s'échapper de la prison, une aiguille passe, on passe à l'action<br>
+        Fausse diversion, un jour tu pètes les plombs<br><br>
+        Les plombs, certains chanceux en ont dans la cervelle<br>
+        D'autres se les envoient pour une poigne de biftons, guerre fraternelle<br>
+        Les armes poussent comme la mauvaise herbe<br>
+        L'image du gangster se propage comme la gangraine sème ses graines<br><br>
+        Graines, graines, graine de déiinquant qu'espèrez-vous? Tous jeunes<br>
+        On leur apprend que rien ne fait un homme à part les francs<br>
+        Au franc tireur discret au groupe organisé, la racine devient champs<br>
+        Trop grand, impossible a arrêté<br><br>
+        Arrêté, poisseux au départ, chanceux à la sortie<br>
+        On prend trois mois, le bruit cours, la réputation grandit<br>
+        Les barreaux font plus peur, c'est la routine, vulgaire épine<br>
+        Fine esquisse à l'encre de Chine, figurine qui parfois s'anime<br><br>
+        S'anime, anime animé d'une furieuse envie de monnaie<br>
+        Le noir tombe, qu'importe le temps qu'il fait, on jette les dés, faut
+        Flamber<br>
+        Perdre et gagner, rentrer avec quelques papiers en plus<br>
+        Ça aidera, personne demandera d'où ils sont tombés<br><br>
+        Tomber ou pas, pour tout, pour rien on prend le risque, pas grave cousin<br>
+        De toute façon dans les deux cas, on s'en sort bien<br>
+        Vivre comme un chien ou un price, y'a pas photo<br>
+        On fait un choix, fait griller le gigot, brillent les joyaux<br><br>
+        Joyaux, un rêve, piein ies poches mais la cible est loin, la flèche<br>
+        Ricoche, le diable rajoute une encoche trop moche ies mecs cochent<br>
+        Leur propre case, décoche pour du cash, j'entends les cloches, les coups de
+        Pioche<br>
+        Creuser un trou, c'est trop fastoche<br><br>
+        Fastoche, facile le blouson du bourgeois docile des mêmes la hantise<br>
+        Et porcelaine dans le pare-brise<br>
+        Tchac! le rasoir sur le sac à main, par ici ies talbins<br>
+        Ça c'est toute la journée, lendemain, après lendemain<br><br>
+        Lendemain? C'est pas le problème, on vit au jour le jour<br>
+        On n'a pas le temps ou on perd de l'argent, les autres le prennent<br>
+        Demain, c'est loin, on n'est pas pressé, au fur et à mesure<br>
+        On avance en surveillant nos fesses pour parler au futur<br><br>
+        Futur, le futur ne changera pas grand-chose, les générations prochaines<br>
+        Seront pires que nous, leur vie sera plus morose<br>
+        Notre avenir, c'est la minute d'après le but, anticiper<br>
+        Prévenir avant de se faire clouer<br><br>
+        Clouer, clouer sur un banc rien d'autre à faire, on boit de la bière<br>
+        On siffle les gazières qui n'ont pas de frère<br>
+        Les murs nous tiennent comme du papier tue-mouches<br>
+        On est là, jamais on s'en sortira, Satan nous tient avec sa fourche<br><br>
+        Fourche, enfourcher les risques seconde après seconde<br>
+        Chaque occasion est une pierre de plus ajoutée à nos frondes<br>
+        Contre leurs lasers, certains désespèrent, beaucoup touchent terre<br>
+        Les obstinés refusent le combat suicidaire<br><br>
+        Cidaire, sidérés, les dieux regardent, I'humain se dirigent vers le mauvais<br>
+        Côté de l'éternité d'un pas décidé<br>
+        Préfèreront rôder en bas en haut, on va s'emmerder<br>
+        Y'a qu'ici que les anges vendent la fumée<br><br>
+        Fumée, encore une bouffée, le voile est tombé<br>
+        La tête sur l'oreiller, la merde un instant estomper<br>
+        Par la fenêtre, un cri fait son entrée, un homme se fait braquer<br>
+        Un enfant se fait serrer, pour une Cartier menotté<br><br>
+        Menotté, pieds et poings liés par la fatalité<br>
+        Prisonnier du donjon, le destin est le geôlier<br>
+        Le teurf l'arène on a grandit avec les jeux<br>
+        Gladiateur courageux, mais la vie est coriace, on lutte comme on peut<br><br>
+        Dans les constructions élevées<br>
+        Incompréhension, bandes de gosses soi-disant mal élevés<br>
+        Frictions, excitation, patrouilles de civils<br>
+        Trouille inutile, légendes et mythes débiles<br><br>
+        Haschich au kilo, poètes armés de stylo<br>
+        Réserves de créativité, hangars, silos<br>
+        Ça file au Bloc 20, pack de Heineken dans les mains<br>
+        Oublier en tirant sur un gros joint<br><br>
+        Princesses d'Afrique, fille mère, plastique<br>
+        Plein de colle, raclo à la masse lunatique<br>
+        Economie parallèle, équipe dure comme un roc<br>
+        Petits Don qui contrôlent grave leurs spots<br><br>
+        On pète la Veuve Cliquot, parqués comme à Mexico<br>
+        Horizons cimentés, pickpockets, toxicos<br>
+        Personnes honnêtes ignorées, superflics, Zorros<br>
+        Politiciens et journalistes en visite au zoo<br><br>
+        Musulmans respectueux, pères de famille humbles<br>
+        Baffles qui blastent la musique de la jungle<br>
+        Entrées dévastées, carcasses de tires éclatées<br>
+        Nuée de gosses qui viennent gratter<br><br>
+        Lumières oranges qui s'allument, cheminées qui fument<br>
+        Parties de foot improvisées sur le bitume<br>
+        Golf, VR6, pneus qui crissent<br>
+        Silence brisé par les sirènes de police<br><br>
+        Polos Façonnable, survêtements minables<br>
+        Mères au traits de caractère admirables<br>
+        Chichon bidon, histoires de prison<br>
+        Stupides divisions, amas de tisons<br><br>
+        Clichés d'Orient, cuisine au piment<br>
+        Jolis noms d'arbres pour des bâtiments dans la forêt de ciment<br>
+        Désert du midi, soleil écrasant<br>
+        Vie la nuit, pendant le mois de Rhamadhan<br><br>
+        Pas de distraction, se créer un peu d'action<br>
+        Jeu de dés, de contrée, paris d'argent, méchante attraction<br>
+        Rires ininterrompus, arrestations impromptues<br>
+        Maires d'arrondissement corrompus<br><br>
+        Marcher sur les seringues usagées, rêver de voyager<br>
+        Autoradios en affaire, lot de chaînes arrachées<br>
+        Bougre sans retour, psychopathe sans pitié<br>
+        Meilleurs liens d'amitié qu'un type puisse trouver<br><br>
+        Génies du sport faisant leurs classes sur les terrains vagues<br>
+        Nouvelles blagues, terribles techniques de drague<br>
+        Individualités qui craquent parce que stressées<br>
+        Personne ne bouge, personne ne sera blessé<br><br>
+        Vapeur d'éther, d'eau écarlate, d'alcool<br>
+        Fourgon de la Brink's maté comme le pactole<br>
+        C'est pas drôle, le chien mord enfermé dans la cage<br>
+        Bave de rage, les barreaux grimpent au deuxième étage<br><br>
+        Dealer du hashich, c'est sage si tu veux sortir la femme<br>
+        Si tu plonges, la ferme, pas drame<br>
+        Mais l'école est pas loin, les ennuis non plus<br>
+        Ça commence par des tapes au cul, ça finit par des gardes à vue<br><br>
+        Regarde la rue, ce qui change? Y'a que les saisons<br>
+        Tu baves du béton, crache du béton, chie du béton<br>
+        Te hats pour du laiton, estce que ça rapporte<br>
+        Regrette pas les biftons quand la BAC frappe à la porte<br><br>
+        Trois couleurs sur les affiches nous traitent comme des bordilles<br>
+        C'est pas Manille OK, mais les cigarettes se torpillent<br>
+        Coupable innocent, ça parle cash, de pour cent<br>
+        Oeii pour oeil, bouche pour dent, c'est stressant<br><br>
+        Très tôt, c'est déjà la famille dehors, la bande à Kader<br>
+        Va niquer ta mère, la merde au cul, ils parlent déjà de travers<br>
+        Pas facile de parler d'amour, travail à l'usine<br>
+        Les belles gazeiles se brisent l'échine dans les cuisines<br><br>
+        Les élus ressassent rénovation ça rassure<br>
+        Mais c'est toujours la même merde, derrière la dernière couche<br>
+        De peinture, feu les rêves gisent enterrés dans la cour<br>
+        A douze ans conduire, mourir, finir comme Tupac Shakur<br><br>
+        Mater les photos, majeur aujourd'hui, poto<br>
+        Pas mal d'amis se sont déjà tués en moto<br>
+        Une fois tu gagnes, mille fois tu perds, le futur c'est un loto<br>
+        Pour ce, je dédie mes textes en qualité d'ex-voto, mec<br><br>
+        Ici t'es jugé à la réputation forte<br>
+        Manque-toi et tous les jours les bougres pissent sur ta porte<br>
+        C'est le tarif minimum et gaffe<br>
+        Ceux qui pèsent transforment le secteur en oppidum<br>
+        Gelé, i'ambiance s'électrise, y'a plein de places assises<br>
+        Béton figé fait office de froide banquise<br>
+        Les gosses veulent sortir, les "non" tombent comme des massues<br>
+        Les artistes de mon cul, pompent les subventions DSU<br><br>
+        Tant d'énergie perdue pour des préjugés indus<br>
+        Les décideurs financiers plein de merde dans la vue<br>
+        En attendant, les espoirs foirent, capotent, certains rappent<br>
+        Les pierres partent, les caisses volées dérapent<br><br>
+        C'est le bordel au Iycée, dans les couloirs on ouvre les extincteurs<br>
+        Le quartier devient le terrain de chasse des inspecteurs<br>
+        Le dos à un oeil car les eaux sont truffées d'écueils<br>
+        Recueille le blé, on joue aux dés dans un sombre cercueil<br><br>
+        C'est trop, les potos chient sur le profil Roméo<br>
+        Un tchoc de popo, faire ies fils et un bon rodéo<br>
+        La vie est dure, si on veut du rêve<br>
+        Lls mettent du pneu dans le shit et te vendent ça Ramsellef<br><br>
+        Tu me diras "ça va, c'est pas trop"<br>
+        Mais pour du tcherno, un hamidou quand on n'a rien, c'est chaud<br>
+        Je sais de quoi je parle, moi, le batard<br>
+        J'ai du fêter mes vingt ans avec trois bouteilles de Valstar<br><br>
+        Le spot bout ce soir qui est le King<br>
+        D'entrée, les murs sont réservés comme des places de parKing<br>
+        Mais qui peut comprendre la mène pleine<br>
+        Qu'un type a bout frappe sec poussé par la haine<br><br>
+        Et qu'on ne nait pas programmé pour faire un foin<br>
+        Je pense pas à demain, parce que demain c'est loin<br>
     </p>
+    
 </div>
 
 
