--- a/musique1.html
+++ b/musique1.html
@@ -12,8 +12,9 @@
     <h1><i> Sittin'on</i> - <strong><u>Otis redding</u></strong></h1>
 <div class="corps">
     <div class="image">
+        <div class="img">
         <img src="/assets/image/otis-redding.jpg" alt="Otis redding" width="300">
-    </div>
+    </div></div>
     <div class="video">
         <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/xvihgv" width="100%"
             height="100%" allowfullscreen> </iframe>
