--- a/musique3.html
+++ b/musique3.html
@@ -13,7 +13,7 @@
 <div class="corps">
     <div class="image">
         <div class="img">
-        <img src="/assets/image/iam.jpg" alt="Otis redding" width="320">
+        <img src="/assets/image/iam.jpg" alt="IAM" width="320">
     </div></div>
     <div class="video">
         <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3df7i" width="100%" height="100%" allowfullscreen > </iframe> </div>    
