--- a/musique4.html
+++ b/musique4.html
@@ -13,7 +13,7 @@
 <div class="corps">
     <div class="image">
         <div class="img">
-        <img src="/assets/image/carmen.jpg" alt="Otis redding" width="300">
+        <img src="/assets/image/carmen.jpg" alt="Carmen" width="300">
     </div></div>
     <div class="video">
         <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x1zuml" width="100%" height="100%" allowfullscreen > </iframe>
