--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Fredoka+One&family=Poppins&display=swap"
         rel="stylesheet">
+        <link rel="icon" href="/assets/image/musique.jpg" />
 
 <body>
     <div class="header">
@@ -78,15 +79,46 @@
 
             <div class="card">
                 <div class="front-face fnb">
-                    <h2>Raï</h2>
+                    <h2>variété</h2>
                 </div>
                 <div class="back-face fnb bf7">
-                    <h3 class="contraste"><i>Bladi</i> - <strong>Cheb Mami</strong></h3>
+                    <h3 class="contraste"><i>Vesoul</i> - <strong>Jacques brelrel</strong></h3>
                     <a class="buttonbtn" href="/musique7.html">En savoir plus</a>
                 </div>
             </div>
 
+            <div class="card">
+                <div class="front-face fnb">
+                    <h2>Raï</h2>
+                </div>
+                <div class="back-face fnb bf8">
+                    <h3 class="contraste"><i>Bladi</i> - <strong>Cheb Mami</strong></h3>
+                    <a class="buttonbtn" href="/musique8.html">En savoir plus</a>
+                </div>
+            </div>
 
+            <div class="card">
+                <div class="front-face fnb">
+                    <h2>pop</h2>
+                </div>
+                <div class="back-face fnb bf9">
+                    <h3 ><i>Billie Jean</i> - <strong>Michael Jackson</strong></h3>
+                    <a class="buttonbtn" href="/musique9.html">En savoir plus</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="front-face fnb">
+                    <h2>Best</h2>
+                </div>
+                <div class="back-face fnb bf10">
+                    <h3 ><i>le son d'un clavier</i> - <strong>Développeur web</strong></h3>
+                    <a class="buttonbtn" href="/musique10.html">En savoir plus</a>
+                </div>
+            </div>
+
+
+        
 
         </div>
 
