--- a/musique4.html
+++ b/musique4.html
@@ -6,6 +6,7 @@
     <title>Time to move</title>
     <link rel="stylesheet" href="/style-musique.css">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <link rel="icon"  href="/assets/image/carmen.jpg" />
 </head>
 
 <body>
