--- a/musique2.html
+++ b/musique2.html
@@ -6,6 +6,8 @@
     <title>Three little birds</title>
     <link rel="stylesheet" href="/style-musique.css">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <link rel="icon"  href="/assets/image/bob-marley.jpg" />
+    
 </head>
 
 <body>
