--- a/musique7.html
+++ b/musique7.html
@@ -3,37 +3,88 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>bladi</title>
+    <title>Vesoul</title>
     <link rel="stylesheet" href="/style-musique.css">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Poppins&family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <link rel="icon"  href="/assets/image/jacques-brel.jpg" />
 </head>
 
 <body>
-    <h1><i> bladi</i> - <strong><u>Cheb Mami</u></strong></h1>
+    <h1><i>Vesoul</i> - <strong><u>Jacques Brel</u></strong></h1>
 <div class="corps">
     <div class="image">
         <div class="img">
-        <img src="/assets/image/cheb-mami.jpg" alt="Cheb Mami" width="300">
+        <img src="/assets/image/jacques-brel.jpg" alt="Jacques Brel" width="300">
     </div></div>
     <div class="video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1NMK6Iqmks8" title="Cheb Mami bledi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </div>
+        <iframe frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x5jkld?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"> </iframe>    </div>
     <div class="paroles">
     <h2>Paroles</h2>
     <br>
-    <p>Bledi hiya el djazair <br>
-        Ou aliha rani hayer<br>
-        Bghit rohelha zaier<br>
-        Ouelfek kif sahel ouel ferak ma d'kert ano (x2)<br>
-        <br>
-        Walah ma n'ssit annaba ghalia<br>
-        Constantine setef el alia<br>
-        Bledi narha fi gualbi guadia<br>
-        Ouelfek kif sahel ouel ferak ma d'kert ano (x2)<br>
-        <br>
-        Wahran zinet el bouldani<br>
-        Oueli gh'ramha rechani<br>
-        Ouela Saida ouli li rabatni<br>
-        Ouelfek kif sahel ouel ferak ma d'kert ano (x2)<br>
+    <p>T'as voulu voir Vierzon, et on a vu Vierzon <br>
+        T'as voulu voir Vesoul, et on a vu Vesoul<br>
+        T'as voulu voir Honfleur, et on a vu Honfleur<br>
+        T'as voulu voir Hambourg, et on a vu Hambourg<br>
+        J'ai voulu voir Anvers, on a revu Hambourg<br>
+        J'ai voulu voir ta sœur, et on a vu ta mère<br>
+        Comme toujours<br><br>
+        T'as plus aimé Vierzon, on a quitté Vierzon<br>
+        T'as plus aimé Vesoul, on a quitté Vesoul<br>
+        T'as plus aimé Honfleur, on a quitté Honfleur<br>
+        T'as plus aimé Hambourg, on a quitté Hambourg<br>
+        T'as voulu voir Anvers, on n'a vu qu'ses faubourgs<br>
+        T'as plus aimé ta mère, on a quitté ta sœur<br>
+        Comme toujours<br><br>
+        Mais je te le dis, je n'irai pas plus loin<br>
+        Mais je te préviens, j'irai pas à Paris<br>
+        D'ailleurs, j'ai horreur de tous les flonflons<br>
+        De la valse musette et de l'accordéon<br><br>
+        T'as voulu voir Paris, et on a vu Paris<br>
+        T'as voulu voir Dutronc, et on a vu Dutronc<br>
+        J'ai voulu voir ta sœur, j'ai vu le Mont Valérien<br>
+        T'as voulu voir Hortense, elle était dans le Cantal<br>
+        J'ai voulu voir Byzance, et on a vu Pigalle<br>
+        À la gare Saint-Lazare, j'ai vu les Fleurs du Mal<br>
+        Par hasard<br><br>
+        T'as plus aimé Paris, on a quitté Paris<br>
+        T'as plus aimé Dutronc, on a quitté Dutronc<br>
+        Maintenant j'confonds ta sœur et le Mont Valérien<br>
+        De c'que je sais d'Hortense, j'irai plus dans le Cantal<br>
+        Et tant pis pour Byzance, puisque j'ai vu Pigalle<br>
+        Et la gare Saint-Lazare, c'est cher et ça fait mal<br>
+        Au hasard<br>
+        Mais je te le redis (chauffe, Marcel, chauffe!)<br>
+        Je n'irai pas plus loin<br>
+        Mais je te préviens (kaï, kaï, kaï)<br>
+        Le voyage est fini<br>
+        D'ailleurs, j'ai horreur de tous les flonflons<br>
+        De la valse musette et de l'accordéon<br><br>
+        T'as voulu voir Vierzon, et on a vu Vierzon<br>
+        T'as voulu voir Vesoul, et on a vu Vesoul<br>
+        T'as voulu voir Honfleur, et on a vu Honfleur<br>
+        T'as voulu voir Hambourg, et on a vu Hambourg<br>
+        J'ai voulu voir Anvers, et on a revu Hambourg<br>
+        J'ai voulu voir ta sœur, et on a vu ta mère<br>
+        Comme toujours<br>
+        T'as plus aimé Vierzon, on a quitté Vierzon (chauffe, chauffe, chauffe)<br>
+        T'as plus aimé Vesoul, on a quitté Vesoul<br>
+        T'as plus aimé Honfleur, on a quitté Honfleur<br>
+        T'as plus aimé Hambourg, on a quitté Hambourg<br>
+        T'as voulu voir Anvers, on n'a vu qu'ses faubourgs<br>
+        T'as plus aimé ta mère, on a quitté ta sœur<br>
+        Comme toujours (chauffez les gars)<br><br>
+        Mais je te le redis (kaï)<br>
+        Je n'irai pas plus loin<br>
+        Mais je te préviens, j'irai pas à Paris<br>
+        D'ailleurs, j'ai horreur de tous les flonflons<br>
+        De la valse musette et de l'accordéon<br><br>
+        T'as voulu voir Paris, et on a vu Paris<br>
+        T'as voulu voir Dutronc, et on a vu Dutronc<br>
+        J'ai voulu voir ta sœur, j'ai vu le Mont Valérien<br>
+        T'as voulu voir Hortense, elle était dans le Cantal<br>
+        J'ai voulu voir Byzance, et on a vu Pigalle<br>
+        À la gare Saint-Lazare, j'ai vu les Fleurs du Mal<br>
+        Par hasard<br><br>
         <br>
     </p>
 </div>
